--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,7 +35,7 @@
     --radius: 0.5rem;
   }
 
-  .dark {
+  [data-theme='dark'] {
     --background: 210 11.1% 3.53%;
     --foreground: 0 0% 98%;
 
