--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -39,7 +39,7 @@
     --background: 0 0% 0%;
     --foreground: 0 0% 100%;
 
-    --card: 210 11.1% 3.53%;
+    --card: 240, 5%, 4%;
     --card-foreground: 0 0% 98%;
 
     --popover: 210 11.1% 3.53%;
