--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -65,3 +65,10 @@
     --ring: 0 0% 83.1%;
   }
 }
+
+.bg-clip {
+  height: 30px;
+  width: 30px;
+  background-color: red;
+  clip-path: url(#clip-path);
+}
